--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         body {
             margin: 0;
             font-family: 'Assistant', sans-serif;
-            background: #0f172a;
+            background: #000c29;
             color: var(--text);
             scroll-behavior: smooth;
         }
